<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
          android:icon="@drawable/ic_search_black_24dp"
          app:showAsAction="collapseActionView|ifRoom"
          app:actionViewClass="android.support.v7.widget.SearchView" tools:ignore="MenuTitle"
    />

    <item android:title="comics"
          android:id="@+id/comic_menu"
          android:icon="@mipmap/ic_launcher_round"
    ></item>

    <item android:title="character"
          android:id="@+id/character_menu"
          android:icon="@mipmap/ic_launcher_round"></item>
</menu>