...
            android:layout_height="782dp"
            android:contentDescription="background" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:layout_width="411dp"
            android:layout_height="365dp" app:srcCompat="@android:color/transparent"
            android:id="@+id/comic_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="366dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"/>
    <EditText
...
            android:text="COMICS"
            android:ems="10"
            android:id="@+id/comic_text" android:textStyle="bold" android:textSize="58sp"
            android:textColor="@android:color/background_light"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="140dp" app:layout_constraintTop_toTopOf="@+id/bg_2"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/character_bg"
            app:layout_constraintVertical_bias="0.0" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/comic_bg"/>
    <ImageView
            android:layout_width="411dp"
            android:layout_height="366dp" app:srcCompat="@android:color/transparent"
            android:id="@+id/character_bg"
...
