...
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/cardViewGrey"
            android:focusableInTouchMode="true">
        <ImageView
                android:id="@+id/comicImage"
                android:contentDescription="Image here"
                android:layout_width="60dp"
                android:layout_height="88dp"
                android:layout_weight="3"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
...
